@@ -122,6 +122,7 @@ extern PORT r2k_port;
 
 static builtins _z80_builtins[] = {
   {"__builtin_memcpy", "vg*", 3, {"vg*", "vg*", "ui"}},
+  {"__builtin_memset", "vg*", 3, {"vg*", "i", "ui"}},
   {NULL, NULL, 0, {NULL}}
 };
 
