@@ -1,3 +1,11 @@
+2011-10-19 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCopt.c,
+	  src/z80/gen.c,
+	  src/z80/main.c,
+	  device/include/string.h:
+	  Built-in memset() for z80, z180 and r2k.
+
 2011-10-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/z80/gen.c:
